# anedya-camera-livestream-example

./: .gitignore  README.md
.github/workflows/: build-apk.yml  deploy-pages.yml
peer/: package-lock.json  package.json  server.js
peer/public/: index.html
peer_app/: pubspec.yaml
peer_app/android/app/: build.gradle.kts
peer_app/android/app/src/main/: AndroidManifest.xml
peer_app/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
peer_app/android/app/src/main/kotlin/com/example/peer_app/: MainActivity.kt
peer_app/ios/Runner/: Info.plist
peer_app/ios/Runner.xcodeproj/: project.pbxproj
peer_app/lib/: main.dart  peer_cam_screen.dart  qr_code_scanner.dart
streamer/: .env.example  camera.py  camera_streamer.py  config.py  main.py  pyproject.toml  recording.py  tracks.py
